src/ui/snapshots/settl__ui__snapshot_tests__llamafile_setup.snap
---
source: src/ui/snapshot_tests.rs
assertion_line: 173
expression: buffer_to_string(&buf)
---




























                                                                            Setting up local AI

                                                            Downloading Bonsai-1.7B... 500.0 MB / 1.00 GB (48%)

                                                                 ███████████████████░░░░░░░░░░░░░░░░░░░░░































                                                                                Esc: cancel
