src/ui/snapshots/settl__ui__snapshot_tests__main_menu.snap
---
source: src/ui/snapshot_tests.rs
expression: buffer_to_string(&buf)
---























                                                                ███████╗███████╗████████╗████████╗██╗
                                                                ██╔════╝██╔════╝╚══██╔══╝╚══██╔══╝██║
                                                                ███████╗█████╗     ██║      ██║   ██║
                                                                ╚════██║██╔══╝     ██║      ██║   ██║
                                                                ███████║███████╗   ██║      ██║   ███████╗
                                                                ╚══════╝╚══════╝   ╚═╝      ╚═╝   ╚══════╝


                                                                             terminal settlers

                                                                            > New Game
                                                                              Personalities
                                                                              Settings
                                                                              Docs
                                                                              About
                                                                              Quit

                                                                  [↑↓] navigate  [Enter] select  [q] quit
