src/ui/snapshots/settl__ui__snapshot_tests__new_game.snap
---
source: src/ui/snapshot_tests.rs
expression: buffer_to_string(&buf)
---

                                                                                 New Game

                                                     PLAYERS

                                                         Players:  ○ 3   ● 4

                                                         1  Player        Human
                                                         2  Marco         Llamafile   Aggressive
                                                         3  Leif          Llamafile   Grudge Holder
                                                         4  Vasco         Llamafile   Builder

                                                     RULES

                                                          Friendly Robber     Off
                                                          Board Layout        Beginner
                                                          AI Model            1.7B (fast)

                                                       [ Start Game ]













































                                                          ↑↓: move  |  ←→: change  |  Enter: select  |  Esc: back
